--- a/SOF2043_SD20303/src/main/java/poly/cafe/ui/PolyCafeJFrame.form
+++ b/SOF2043_SD20303/src/main/java/poly/cafe/ui/PolyCafeJFrame.form
@@ -112,21 +112,33 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="B&#xc1;N H&#xc0;NG"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalesActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnHistory">
           <Properties>
             <Property name="text" type="java.lang.String" value="L&#x1eca;CH S&#x1eec;"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHistoryActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnChangePassword">
           <Properties>
             <Property name="text" type="java.lang.String" value="&#x110;&#x1ed4;I M&#x1eac;T KH&#x1ea8;U"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnChangePasswordActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnExit">
           <Properties>
             <Property name="text" type="java.lang.String" value="K&#x1ebe;T TH&#xda;C"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnExitActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="lblPhoto">
           <Properties>
@@ -206,11 +218,17 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="&#x110;&#x1ed2; U&#x1ed0;NG"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDrinkManagerActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnBillManager">
               <Properties>
                 <Property name="text" type="java.lang.String" value="PHI&#x1ebe;U B&#xc1;N H&#xc0;NG"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBillManagerActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnCategoryManager">
               <Properties>
@@ -224,6 +242,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="NG&#x1af;&#x1edc;I S&#x1eec; D&#x1ee4;NG"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUserManagerActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnCardManager">
               <Properties>
@@ -237,6 +258,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="DOANH THU"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRevenueManagerActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
